Issue #448: Updated swagger api spec: - Renamed the `paginatedListGetter` to action group to `paginatedList` (as I started building out more action groups I realized that the action group names should describe the nouns not the verbs since each group may have many different verbs) - Updated `bl-backend-list` to use new `paginatedList` action group name. - Added badgeEndorsements to swagger spec (along with new `importList` action group) - Added poller to swagger spec (along with new `recordItem` action group)
